--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@ body {
   margin: 0;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   background-color: rgb(26, 25, 25);
+  color: aliceblue;
   /* background-color: rgb(246, 246, 246); */
 }
 
